more generics, use slf4j